[gd_scene load_steps=44 format=4 uid="uid://0wd6ww2t7od8"]

[ext_resource type="Script" uid="uid://cndo3fdlfa4pq" path="res://script/panda's_automatic_platformer.gd" id="1_oyc3t"]
[ext_resource type="Texture2D" uid="uid://c41jkf66ip1it" path="res://assets/sprites/ground.png" id="1_yk78b"]
[ext_resource type="Script" uid="uid://cosb42cujfswf" path="res://script/pandolfi.gd" id="2_4a0ou"]
[ext_resource type="Texture2D" uid="uid://cqlbk6uffd80a" path="res://assets/sprites/Black cat-Sheet.png" id="2_aqobb"]
[ext_resource type="Script" uid="uid://dhwe706kbyije" path="res://script/waterthingy.gd" id="2_y2f1n"]
[ext_resource type="Script" uid="uid://baiqektw05ynr" path="res://script/spikes.gd" id="3_lualr"]
[ext_resource type="Texture2D" uid="uid://mcyisypobpom" path="res://assets/sprites/waterthingy.png" id="4_vfnal"]
[ext_resource type="Texture2D" uid="uid://b6edpe3dowbeo" path="res://assets/sprites/spikes.png" id="5_asp4k"]
[ext_resource type="PackedScene" uid="uid://63vravh4dbiq" path="res://scenes/background.tscn" id="9_vixkd"]
[ext_resource type="PackedScene" uid="uid://bhk28bt8n75pa" path="res://scenes/fish.tscn" id="10_4y3pj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y2f1n"]
radius = 2.0
height = 10.0

[sub_resource type="Gradient" id="Gradient_vixkd"]
offsets = PackedFloat32Array(0, 0.9066667)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4y3pj"]
gradient = SubResource("Gradient_vixkd")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.49532712, 0)

[sub_resource type="Gradient" id="Gradient_0ft5y"]
offsets = PackedFloat32Array(0.08, 0.87333333)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w8qy5"]
gradient = SubResource("Gradient_0ft5y")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.45794392, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aqobb"]
texture = ExtResource("1_yk78b")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.075994, 0.97047496, 3.9465978, 1.0351732, 4.043645, 8, -3.9789467, 8)
3:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.0436454, -5.01412, 3.978947, -5.046469, 3.946598, 8, -4.0759945, 8)
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
1:2/size_in_atlas = Vector2i(2, 1)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.109882, -2.0379975, 14.977662, -1.9732988, 14.977662, 5.01412, -16.045185, 5.046469)

[sub_resource type="TileSet" id="TileSet_4a0ou"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_aqobb")

[sub_resource type="AtlasTexture" id="AtlasTexture_aqobb"]
atlas = ExtResource("2_aqobb")
region = Rect2(0, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a0ou"]
atlas = ExtResource("2_aqobb")
region = Rect2(40, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfnal"]
atlas = ExtResource("2_aqobb")
region = Rect2(80, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_asp4k"]
atlas = ExtResource("2_aqobb")
region = Rect2(120, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyc3t"]
atlas = ExtResource("2_aqobb")
region = Rect2(160, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lualr"]
atlas = ExtResource("2_aqobb")
region = Rect2(200, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2f1n"]
atlas = ExtResource("2_aqobb")
region = Rect2(240, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vixkd"]
atlas = ExtResource("2_aqobb")
region = Rect2(280, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y3pj"]
atlas = ExtResource("2_aqobb")
region = Rect2(320, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ft5y"]
atlas = ExtResource("2_aqobb")
region = Rect2(360, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8qy5"]
atlas = ExtResource("2_aqobb")
region = Rect2(400, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ndbw"]
atlas = ExtResource("2_aqobb")
region = Rect2(120, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e7vm"]
atlas = ExtResource("2_aqobb")
region = Rect2(0, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80n4b"]
atlas = ExtResource("2_aqobb")
region = Rect2(40, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2kyf"]
atlas = ExtResource("2_aqobb")
region = Rect2(80, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbnse"]
atlas = ExtResource("2_aqobb")
region = Rect2(120, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3aej"]
atlas = ExtResource("2_aqobb")
region = Rect2(160, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu2gw"]
atlas = ExtResource("2_aqobb")
region = Rect2(200, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdbeo"]
atlas = ExtResource("2_aqobb")
region = Rect2(240, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0fqq"]
atlas = ExtResource("2_aqobb")
region = Rect2(280, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axm63"]
atlas = ExtResource("2_aqobb")
region = Rect2(320, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppivk"]
atlas = ExtResource("2_aqobb")
region = Rect2(360, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xix8c"]
atlas = ExtResource("2_aqobb")
region = Rect2(400, 32, 40, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_80n4b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqobb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a0ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfnal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asp4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyc3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lualr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2f1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vixkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y3pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ft5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8qy5")
}],
"loop": true,
"name": &"duck",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ndbw")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e7vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80n4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2kyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbnse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3aej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu2gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdbeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0fqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axm63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppivk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xix8c")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2kyf"]
size = Vector2(17, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqobb"]
size = Vector2(17, 9.5)

[node name="Panda\'s automatic platformer" type="Node2D"]
script = ExtResource("1_oyc3t")

[node name="obstacles" type="Node2D" parent="."]

[node name="ObstacleTemplates" type="Node2D" parent="."]

[node name="waterthingy" type="Area2D" parent="ObstacleTemplates"]
visible = false
z_index = 4
monitoring = false
monitorable = false
script = ExtResource("2_y2f1n")

[node name="Sprite2D" type="Sprite2D" parent="ObstacleTemplates/waterthingy"]
position = Vector2(44, 0)
texture = ExtResource("4_vfnal")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleTemplates/waterthingy"]
position = Vector2(43, 1)
shape = SubResource("CapsuleShape2D_y2f1n")

[node name="PointLight2D" type="PointLight2D" parent="ObstacleTemplates/waterthingy"]
position = Vector2(43, 2)
color = Color(1, 0.6313726, 0.6627451, 1)
energy = 0.2
texture = SubResource("GradientTexture2D_4y3pj")

[node name="spikes" type="Area2D" parent="ObstacleTemplates"]
visible = false
z_index = 4
position = Vector2(63, 0)
monitoring = false
monitorable = false
script = ExtResource("3_lualr")

[node name="Sprite2D" type="Sprite2D" parent="ObstacleTemplates/spikes"]
texture = ExtResource("5_asp4k")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ObstacleTemplates/spikes"]
position = Vector2(-0.26041698, 0.7687503)
scale = Vector2(1.0208334, 0.8124999)
polygon = PackedVector2Array(8, 8, 8, 5, -7, 5, -7, 8)

[node name="PointLight2D" type="PointLight2D" parent="ObstacleTemplates/spikes"]
position = Vector2(1, 7)
color = Color(1, 0.6310836, 0.66245806, 1)
energy = 0.2
texture = SubResource("GradientTexture2D_w8qy5")

[node name="Ground1" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAD6/wEAAAAAAAAAAAD7/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD//wEAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAEAAAAAAAAAAAAMAAEAAAAAAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAPAAEAAAAAAAAAAAAQAAEAAAAAAAAAAAARAAEAAAAAAAAAAAASAAEAAAAAAAAAAAATAAEAAAAAAAAAAAAUAAEAAAAAAAAAAAAVAAEAAAAAAAAAAAD5/wEAAAAAAAAAAAD4/wEAAAAAAAAAAAD3/wEAAAAAAAAAAAD2/wEAAAAAAAAAAAD1/wEAAAAAAAAAAAD0/wEAAAAAAAAAAADz/wEAAAAAAAAAAADy/wEAAAAAAAAAAADy/wIAAAAAAAEAAADy/wMAAAAAAAEAAADy/wQAAAAAAAEAAADy/wUAAAAAAAEAAADy/wYAAAAAAAEAAADy/wcAAAAAAAEAAADz/wIAAAAAAAEAAADz/wMAAAAAAAEAAADz/wQAAAAAAAEAAADz/wUAAAAAAAEAAADz/wYAAAAAAAEAAADz/wcAAAAAAAEAAAD0/wIAAAAAAAEAAAD0/wMAAAAAAAEAAAD0/wQAAAAAAAEAAAD0/wUAAAAAAAEAAAD0/wYAAAAAAAEAAAD0/wcAAAAAAAEAAAD1/wIAAAAAAAEAAAD1/wMAAAAAAAEAAAD1/wQAAAAAAAEAAAD1/wUAAAAAAAEAAAD1/wYAAAAAAAEAAAD1/wcAAAAAAAEAAAD2/wIAAAAAAAEAAAD2/wMAAAAAAAEAAAD2/wQAAAAAAAEAAAD2/wUAAAAAAAEAAAD2/wYAAAAAAAEAAAD2/wcAAAAAAAEAAAD3/wIAAAAAAAEAAAD3/wMAAAAAAAEAAAD3/wQAAAAAAAEAAAD3/wUAAAAAAAEAAAD3/wYAAAAAAAEAAAD3/wcAAAAAAAEAAAD4/wIAAAAAAAEAAAD4/wMAAAAAAAEAAAD4/wQAAAAAAAEAAAD4/wUAAAAAAAEAAAD4/wYAAAAAAAEAAAD4/wcAAAAAAAEAAAD5/wIAAAAAAAEAAAD5/wMAAAAAAAEAAAD5/wQAAAAAAAEAAAD5/wUAAAAAAAEAAAD5/wYAAAAAAAEAAAD5/wcAAAAAAAEAAAD6/wIAAAAAAAEAAAD6/wMAAAAAAAEAAAD6/wQAAAAAAAEAAAD6/wUAAAAAAAEAAAD6/wYAAAAAAAEAAAD6/wcAAAAAAAEAAAD7/wIAAAAAAAEAAAD7/wMAAAAAAAEAAAD7/wQAAAAAAAEAAAD7/wUAAAAAAAEAAAD7/wYAAAAAAAEAAAD7/wcAAAAAAAEAAAD8/wIAAAAAAAEAAAD8/wMAAAAAAAEAAAD8/wQAAAAAAAEAAAD8/wUAAAAAAAEAAAD8/wYAAAAAAAEAAAD8/wcAAAAAAAEAAAD9/wIAAAAAAAEAAAD9/wMAAAAAAAEAAAD9/wQAAAAAAAEAAAD9/wUAAAAAAAEAAAD9/wYAAAAAAAEAAAD9/wcAAAAAAAEAAAD+/wIAAAAAAAEAAAD+/wMAAAAAAAEAAAD+/wQAAAAAAAEAAAD+/wUAAAAAAAEAAAD+/wYAAAAAAAEAAAD+/wcAAAAAAAEAAAD//wIAAAAAAAEAAAD//wMAAAAAAAEAAAD//wQAAAAAAAEAAAD//wUAAAAAAAEAAAD//wYAAAAAAAEAAAD//wcAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAEAAAABAAIAAAAAAAEAAAABAAMAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAEAAAABAAYAAAAAAAEAAAABAAcAAAAAAAEAAAACAAIAAAAAAAEAAAACAAMAAAAAAAEAAAACAAQAAAAAAAEAAAACAAUAAAAAAAEAAAACAAYAAAAAAAEAAAACAAcAAAAAAAEAAAADAAIAAAAAAAEAAAADAAMAAAAAAAEAAAADAAQAAAAAAAEAAAADAAUAAAAAAAEAAAADAAYAAAAAAAEAAAADAAcAAAAAAAEAAAAEAAIAAAAAAAEAAAAEAAMAAAAAAAEAAAAEAAQAAAAAAAEAAAAEAAUAAAAAAAEAAAAEAAYAAAAAAAEAAAAEAAcAAAAAAAEAAAAFAAIAAAAAAAEAAAAFAAMAAAAAAAEAAAAFAAQAAAAAAAEAAAAFAAUAAAAAAAEAAAAFAAYAAAAAAAEAAAAFAAcAAAAAAAEAAAAGAAIAAAAAAAEAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAEAAAAGAAUAAAAAAAEAAAAGAAYAAAAAAAEAAAAGAAcAAAAAAAEAAAAHAAIAAAAAAAEAAAAHAAMAAAAAAAEAAAAHAAQAAAAAAAEAAAAHAAUAAAAAAAEAAAAHAAYAAAAAAAEAAAAHAAcAAAAAAAEAAAAIAAIAAAAAAAEAAAAIAAMAAAAAAAEAAAAIAAQAAAAAAAEAAAAIAAUAAAAAAAEAAAAIAAYAAAAAAAEAAAAIAAcAAAAAAAEAAAAJAAIAAAAAAAEAAAAJAAMAAAAAAAEAAAAJAAQAAAAAAAEAAAAJAAUAAAAAAAEAAAAJAAYAAAAAAAEAAAAJAAcAAAAAAAEAAAAKAAIAAAAAAAEAAAAKAAMAAAAAAAEAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAEAAAAKAAYAAAAAAAEAAAAKAAcAAAAAAAEAAAALAAIAAAAAAAEAAAALAAMAAAAAAAEAAAALAAQAAAAAAAEAAAALAAUAAAAAAAEAAAALAAYAAAAAAAEAAAALAAcAAAAAAAEAAAAMAAIAAAAAAAEAAAAMAAMAAAAAAAEAAAAMAAQAAAAAAAEAAAAMAAUAAAAAAAEAAAAMAAYAAAAAAAEAAAAMAAcAAAAAAAEAAAANAAIAAAAAAAEAAAANAAMAAAAAAAEAAAANAAQAAAAAAAEAAAANAAUAAAAAAAEAAAANAAYAAAAAAAEAAAANAAcAAAAAAAEAAAAOAAIAAAAAAAEAAAAOAAMAAAAAAAEAAAAOAAQAAAAAAAEAAAAOAAUAAAAAAAEAAAAOAAYAAAAAAAEAAAAOAAcAAAAAAAEAAAAPAAIAAAAAAAEAAAAPAAMAAAAAAAEAAAAPAAQAAAAAAAEAAAAPAAUAAAAAAAEAAAAPAAYAAAAAAAEAAAAPAAcAAAAAAAEAAAAQAAIAAAAAAAEAAAAQAAMAAAAAAAEAAAAQAAQAAAAAAAEAAAAQAAUAAAAAAAEAAAAQAAYAAAAAAAEAAAAQAAcAAAAAAAEAAAARAAIAAAAAAAEAAAARAAMAAAAAAAEAAAARAAQAAAAAAAEAAAARAAUAAAAAAAEAAAARAAYAAAAAAAEAAAARAAcAAAAAAAEAAAASAAIAAAAAAAEAAAASAAMAAAAAAAEAAAASAAQAAAAAAAEAAAASAAUAAAAAAAEAAAASAAYAAAAAAAEAAAASAAcAAAAAAAEAAAATAAIAAAAAAAEAAAATAAMAAAAAAAEAAAATAAQAAAAAAAEAAAATAAUAAAAAAAEAAAATAAYAAAAAAAEAAAATAAcAAAAAAAEAAAAUAAIAAAAAAAEAAAAUAAMAAAAAAAEAAAAUAAQAAAAAAAEAAAAUAAUAAAAAAAEAAAAUAAYAAAAAAAEAAAAUAAcAAAAAAAEAAAAVAAIAAAAAAAEAAAAVAAMAAAAAAAEAAAAVAAQAAAAAAAEAAAAVAAUAAAAAAAEAAAAVAAYAAAAAAAEAAAAVAAcAAAAAAAEAAADy/wAAAAAFAAEAAADz/wAAAAAFAAEAAAD0/wAAAAAFAAEAAAD1/wAAAAAFAAEAAAD2/wAAAAAFAAEAAAD3/wAAAAAFAAEAAAD5/wAAAAAFAAEAAAD6/wAAAAAFAAEAAAD7/wAAAAAFAAEAAAD8/wAAAAAFAAEAAAD9/wAAAAAFAAEAAAD+/wAAAAAFAAEAAAD//wAAAAAFAAEAAAAAAAAAAAAFAAEAAAABAAAAAAAFAAEAAAACAAAAAAAFAAEAAAADAAAAAAAFAAEAAAAEAAAAAAAFAAEAAAAFAAAAAAAFAAEAAAAGAAAAAAAFAAEAAAAHAAAAAAAFAAEAAAAIAAAAAAAFAAEAAAAJAAAAAAAFAAEAAAAKAAAAAAAFAAEAAAALAAAAAAAFAAEAAAAMAAAAAAAFAAEAAAAOAAAAAAAFAAEAAAAPAAAAAAAFAAEAAAAQAAAAAAAFAAEAAAARAAAAAAAFAAEAAAASAAAAAAAFAAEAAAATAAAAAAAFAAEAAAAUAAAAAAAFAAEAAAAVAAAAAAAFAAEAAADy//z/AAAEAAAAAADy//3/AAAEAAAAAADy//7/AAAFAAAAAADy////AAAFAAEAAADz//z/AAAEAAAAAADz//3/AAAEAAAAAADz//7/AAAFAAAAAADz////AAAFAAEAAAD0//z/AAAEAAAAAAD0//3/AAAEAAAAAAD0//7/AAAFAAAAAAD0////AAAFAAEAAAD1//z/AAAEAAAAAAD1//3/AAAEAAAAAAD1//7/AAAFAAAAAAD1////AAAFAAEAAAD2//z/AAAEAAAAAAD2//3/AAAEAAAAAAD2//7/AAAFAAAAAAD2////AAAFAAEAAAD3//z/AAAEAAAAAAD3//3/AAAEAAAAAAD3//7/AAAFAAAAAAD3////AAAFAAEAAAD4//z/AAAEAAAAAAD4//3/AAAEAAAAAAD4//7/AAAFAAAAAAD4////AAAFAAEAAAD5//z/AAAEAAAAAAD5//3/AAAEAAAAAAD5//7/AAAFAAAAAAD5////AAAFAAEAAAD6//z/AAAEAAAAAAD6//3/AAAEAAAAAAD6//7/AAAFAAAAAAD6////AAAFAAEAAAD7//z/AAAEAAAAAAD7//3/AAAEAAAAAAD7//7/AAAFAAAAAAD7////AAAFAAEAAAD8//z/AAAEAAAAAAD8//3/AAAEAAAAAAD8//7/AAAFAAAAAAD8////AAAFAAEAAAD9//z/AAAEAAAAAAD9//3/AAAEAAAAAAD9//7/AAAFAAAAAAD9////AAAFAAEAAAD+//z/AAAEAAAAAAD+//3/AAAEAAAAAAD+//7/AAAFAAAAAAD+////AAAFAAEAAAD///z/AAAEAAAAAAD///3/AAAEAAAAAAD///7/AAAFAAAAAAD/////AAAFAAEAAAAAAPz/AAAEAAAAAAAAAP3/AAAEAAAAAAAAAP7/AAAFAAAAAAAAAP//AAAFAAEAAAABAPz/AAAEAAAAAAABAP3/AAAEAAAAAAABAP7/AAAFAAAAAAABAP//AAAFAAEAAAACAPz/AAAEAAAAAAACAP3/AAAEAAAAAAACAP7/AAAFAAAAAAACAP//AAAFAAEAAAADAPz/AAAEAAAAAAADAP3/AAAEAAAAAAADAP7/AAAFAAAAAAADAP//AAAFAAEAAAAEAPz/AAAEAAAAAAAEAP3/AAAEAAAAAAAEAP7/AAAFAAAAAAAEAP//AAAFAAEAAAAFAPz/AAAEAAAAAAAFAP3/AAAEAAAAAAAFAP7/AAAFAAAAAAAFAP//AAAFAAEAAAAGAPz/AAAEAAAAAAAGAP3/AAAEAAAAAAAGAP7/AAAFAAAAAAAGAP//AAAFAAEAAAAHAPz/AAAEAAAAAAAHAP3/AAAEAAAAAAAHAP7/AAAFAAAAAAAHAP//AAAFAAEAAAAIAPz/AAAEAAAAAAAIAP3/AAAEAAAAAAAIAP7/AAAFAAAAAAAIAP//AAAFAAEAAAAJAPz/AAAEAAAAAAAJAP3/AAAEAAAAAAAJAP7/AAAFAAAAAAAJAP//AAAFAAEAAAAKAPz/AAAEAAAAAAAKAP3/AAAEAAAAAAAKAP7/AAAFAAAAAAAKAP//AAAFAAEAAAALAPz/AAAEAAAAAAALAP3/AAAEAAAAAAALAP7/AAAFAAAAAAALAP//AAAFAAEAAAAMAPz/AAAEAAAAAAAMAP3/AAAEAAAAAAAMAP7/AAAFAAAAAAAMAP//AAAFAAEAAAANAPz/AAAEAAAAAAANAP3/AAAEAAAAAAANAP7/AAAFAAAAAAANAP//AAAFAAEAAAAOAPz/AAAEAAAAAAAOAP3/AAAEAAAAAAAOAP7/AAAFAAAAAAAOAP//AAAFAAEAAAAPAPz/AAAEAAAAAAAPAP3/AAAEAAAAAAAPAP7/AAAFAAAAAAAPAP//AAAFAAEAAAAQAPz/AAAEAAAAAAAQAP3/AAAEAAAAAAAQAP7/AAAFAAAAAAAQAP//AAAFAAEAAAARAPz/AAAEAAAAAAARAP3/AAAEAAAAAAARAP7/AAAFAAAAAAARAP//AAAFAAEAAAASAPz/AAAEAAAAAAASAP3/AAAEAAAAAAASAP7/AAAFAAAAAAASAP//AAAFAAEAAAATAPz/AAAEAAAAAAATAP3/AAAEAAAAAAATAP7/AAAFAAAAAAATAP//AAAFAAEAAAAUAPz/AAAEAAAAAAAUAP3/AAAEAAAAAAAUAP7/AAAFAAAAAAAUAP//AAAFAAEAAAAVAPz/AAAEAAAAAAAVAP3/AAAEAAAAAAAVAP7/AAAFAAAAAAAVAP//AAAFAAEAAAD4/wAAAAAFAAEAAAANAAAAAAAFAAEAAAA=")
tile_set = SubResource("TileSet_4a0ou")

[node name="Ground2" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(576, 0)
tile_map_data = PackedByteArray("AAD6/wEAAAAAAAAAAAD7/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD//wEAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAEAAAAAAAAAAAAMAAEAAAAAAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAPAAEAAAAAAAAAAAAQAAEAAAAAAAAAAAARAAEAAAAAAAAAAAASAAEAAAAAAAAAAAATAAEAAAAAAAAAAAAUAAEAAAAAAAAAAAAVAAEAAAAAAAAAAAD5/wEAAAAAAAAAAAD4/wEAAAAAAAAAAAD3/wEAAAAAAAAAAAD2/wEAAAAAAAAAAAD1/wEAAAAAAAAAAAD0/wEAAAAAAAAAAADz/wEAAAAAAAAAAADy/wEAAAAAAAAAAADy/wIAAAAAAAEAAADy/wMAAAAAAAEAAADy/wQAAAAAAAEAAADy/wUAAAAAAAEAAADy/wYAAAAAAAEAAADy/wcAAAAAAAEAAADz/wIAAAAAAAEAAADz/wMAAAAAAAEAAADz/wQAAAAAAAEAAADz/wUAAAAAAAEAAADz/wYAAAAAAAEAAADz/wcAAAAAAAEAAAD0/wIAAAAAAAEAAAD0/wMAAAAAAAEAAAD0/wQAAAAAAAEAAAD0/wUAAAAAAAEAAAD0/wYAAAAAAAEAAAD0/wcAAAAAAAEAAAD1/wIAAAAAAAEAAAD1/wMAAAAAAAEAAAD1/wQAAAAAAAEAAAD1/wUAAAAAAAEAAAD1/wYAAAAAAAEAAAD1/wcAAAAAAAEAAAD2/wIAAAAAAAEAAAD2/wMAAAAAAAEAAAD2/wQAAAAAAAEAAAD2/wUAAAAAAAEAAAD2/wYAAAAAAAEAAAD2/wcAAAAAAAEAAAD3/wIAAAAAAAEAAAD3/wMAAAAAAAEAAAD3/wQAAAAAAAEAAAD3/wUAAAAAAAEAAAD3/wYAAAAAAAEAAAD3/wcAAAAAAAEAAAD4/wIAAAAAAAEAAAD4/wMAAAAAAAEAAAD4/wQAAAAAAAEAAAD4/wUAAAAAAAEAAAD4/wYAAAAAAAEAAAD4/wcAAAAAAAEAAAD5/wIAAAAAAAEAAAD5/wMAAAAAAAEAAAD5/wQAAAAAAAEAAAD5/wUAAAAAAAEAAAD5/wYAAAAAAAEAAAD5/wcAAAAAAAEAAAD6/wIAAAAAAAEAAAD6/wMAAAAAAAEAAAD6/wQAAAAAAAEAAAD6/wUAAAAAAAEAAAD6/wYAAAAAAAEAAAD6/wcAAAAAAAEAAAD7/wIAAAAAAAEAAAD7/wMAAAAAAAEAAAD7/wQAAAAAAAEAAAD7/wUAAAAAAAEAAAD7/wYAAAAAAAEAAAD7/wcAAAAAAAEAAAD8/wIAAAAAAAEAAAD8/wMAAAAAAAEAAAD8/wQAAAAAAAEAAAD8/wUAAAAAAAEAAAD8/wYAAAAAAAEAAAD8/wcAAAAAAAEAAAD9/wIAAAAAAAEAAAD9/wMAAAAAAAEAAAD9/wQAAAAAAAEAAAD9/wUAAAAAAAEAAAD9/wYAAAAAAAEAAAD9/wcAAAAAAAEAAAD+/wIAAAAAAAEAAAD+/wMAAAAAAAEAAAD+/wQAAAAAAAEAAAD+/wUAAAAAAAEAAAD+/wYAAAAAAAEAAAD+/wcAAAAAAAEAAAD//wIAAAAAAAEAAAD//wMAAAAAAAEAAAD//wQAAAAAAAEAAAD//wUAAAAAAAEAAAD//wYAAAAAAAEAAAD//wcAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAEAAAABAAIAAAAAAAEAAAABAAMAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAEAAAABAAYAAAAAAAEAAAABAAcAAAAAAAEAAAACAAIAAAAAAAEAAAACAAMAAAAAAAEAAAACAAQAAAAAAAEAAAACAAUAAAAAAAEAAAACAAYAAAAAAAEAAAACAAcAAAAAAAEAAAADAAIAAAAAAAEAAAADAAMAAAAAAAEAAAADAAQAAAAAAAEAAAADAAUAAAAAAAEAAAADAAYAAAAAAAEAAAADAAcAAAAAAAEAAAAEAAIAAAAAAAEAAAAEAAMAAAAAAAEAAAAEAAQAAAAAAAEAAAAEAAUAAAAAAAEAAAAEAAYAAAAAAAEAAAAEAAcAAAAAAAEAAAAFAAIAAAAAAAEAAAAFAAMAAAAAAAEAAAAFAAQAAAAAAAEAAAAFAAUAAAAAAAEAAAAFAAYAAAAAAAEAAAAFAAcAAAAAAAEAAAAGAAIAAAAAAAEAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAEAAAAGAAUAAAAAAAEAAAAGAAYAAAAAAAEAAAAGAAcAAAAAAAEAAAAHAAIAAAAAAAEAAAAHAAMAAAAAAAEAAAAHAAQAAAAAAAEAAAAHAAUAAAAAAAEAAAAHAAYAAAAAAAEAAAAHAAcAAAAAAAEAAAAIAAIAAAAAAAEAAAAIAAMAAAAAAAEAAAAIAAQAAAAAAAEAAAAIAAUAAAAAAAEAAAAIAAYAAAAAAAEAAAAIAAcAAAAAAAEAAAAJAAIAAAAAAAEAAAAJAAMAAAAAAAEAAAAJAAQAAAAAAAEAAAAJAAUAAAAAAAEAAAAJAAYAAAAAAAEAAAAJAAcAAAAAAAEAAAAKAAIAAAAAAAEAAAAKAAMAAAAAAAEAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAEAAAAKAAYAAAAAAAEAAAAKAAcAAAAAAAEAAAALAAIAAAAAAAEAAAALAAMAAAAAAAEAAAALAAQAAAAAAAEAAAALAAUAAAAAAAEAAAALAAYAAAAAAAEAAAALAAcAAAAAAAEAAAAMAAIAAAAAAAEAAAAMAAMAAAAAAAEAAAAMAAQAAAAAAAEAAAAMAAUAAAAAAAEAAAAMAAYAAAAAAAEAAAAMAAcAAAAAAAEAAAANAAIAAAAAAAEAAAANAAMAAAAAAAEAAAANAAQAAAAAAAEAAAANAAUAAAAAAAEAAAANAAYAAAAAAAEAAAANAAcAAAAAAAEAAAAOAAIAAAAAAAEAAAAOAAMAAAAAAAEAAAAOAAQAAAAAAAEAAAAOAAUAAAAAAAEAAAAOAAYAAAAAAAEAAAAOAAcAAAAAAAEAAAAPAAIAAAAAAAEAAAAPAAMAAAAAAAEAAAAPAAQAAAAAAAEAAAAPAAUAAAAAAAEAAAAPAAYAAAAAAAEAAAAPAAcAAAAAAAEAAAAQAAIAAAAAAAEAAAAQAAMAAAAAAAEAAAAQAAQAAAAAAAEAAAAQAAUAAAAAAAEAAAAQAAYAAAAAAAEAAAAQAAcAAAAAAAEAAAARAAIAAAAAAAEAAAARAAMAAAAAAAEAAAARAAQAAAAAAAEAAAARAAUAAAAAAAEAAAARAAYAAAAAAAEAAAARAAcAAAAAAAEAAAASAAIAAAAAAAEAAAASAAMAAAAAAAEAAAASAAQAAAAAAAEAAAASAAUAAAAAAAEAAAASAAYAAAAAAAEAAAASAAcAAAAAAAEAAAATAAIAAAAAAAEAAAATAAMAAAAAAAEAAAATAAQAAAAAAAEAAAATAAUAAAAAAAEAAAATAAYAAAAAAAEAAAATAAcAAAAAAAEAAAAUAAIAAAAAAAEAAAAUAAMAAAAAAAEAAAAUAAQAAAAAAAEAAAAUAAUAAAAAAAEAAAAUAAYAAAAAAAEAAAAUAAcAAAAAAAEAAAAVAAIAAAAAAAEAAAAVAAMAAAAAAAEAAAAVAAQAAAAAAAEAAAAVAAUAAAAAAAEAAAAVAAYAAAAAAAEAAAAVAAcAAAAAAAEAAADy/wAAAAAFAAEAAADz/wAAAAAFAAEAAAD0/wAAAAAFAAEAAAD1/wAAAAAFAAEAAAD2/wAAAAAFAAEAAAD3/wAAAAAFAAEAAAD4/wAAAAAFAAEAAAD5/wAAAAAFAAEAAAD6/wAAAAAFAAEAAAD7/wAAAAAFAAEAAAD8/wAAAAAFAAEAAAD9/wAAAAAFAAEAAAD+/wAAAAAFAAEAAAD//wAAAAAFAAEAAAAAAAAAAAAFAAEAAAABAAAAAAAFAAEAAAACAAAAAAAFAAEAAAADAAAAAAAFAAEAAAAEAAAAAAAFAAEAAAAFAAAAAAAFAAEAAAAGAAAAAAAFAAEAAAAHAAAAAAAFAAEAAAAIAAAAAAAFAAEAAAAJAAAAAAAFAAEAAAAKAAAAAAAFAAEAAAALAAAAAAAFAAEAAAAMAAAAAAAFAAEAAAANAAAAAAAFAAEAAAAOAAAAAAAFAAEAAAAPAAAAAAAFAAEAAAAQAAAAAAAFAAEAAAARAAAAAAAFAAEAAAASAAAAAAAFAAEAAAATAAAAAAAFAAEAAAAUAAAAAAAFAAEAAAAVAAAAAAAFAAEAAADy//z/AAAEAAAAAADy//3/AAAEAAAAAADy//7/AAAFAAAAAADy////AAAFAAEAAADz//z/AAAEAAAAAADz//3/AAAEAAAAAADz//7/AAAFAAAAAADz////AAAFAAEAAAD0//z/AAAEAAAAAAD0//3/AAAEAAAAAAD0//7/AAAFAAAAAAD0////AAAFAAEAAAD1//z/AAAEAAAAAAD1//3/AAAEAAAAAAD1//7/AAAFAAAAAAD1////AAAFAAEAAAD2//z/AAAEAAAAAAD2//3/AAAEAAAAAAD2//7/AAAFAAAAAAD2////AAAFAAEAAAD3//z/AAAEAAAAAAD3//3/AAAEAAAAAAD3//7/AAAFAAAAAAD3////AAAFAAEAAAD4//z/AAAEAAAAAAD4//3/AAAEAAAAAAD4//7/AAAFAAAAAAD4////AAAFAAEAAAD5//z/AAAEAAAAAAD5//3/AAAEAAAAAAD5//7/AAAFAAAAAAD5////AAAFAAEAAAD6//z/AAAEAAAAAAD6//3/AAAEAAAAAAD6//7/AAAFAAAAAAD6////AAAFAAEAAAD7//z/AAAEAAAAAAD7//3/AAAEAAAAAAD7//7/AAAFAAAAAAD7////AAAFAAEAAAD8//z/AAAEAAAAAAD8//3/AAAEAAAAAAD8//7/AAAFAAAAAAD8////AAAFAAEAAAD9//z/AAAEAAAAAAD9//3/AAAEAAAAAAD9//7/AAAFAAAAAAD9////AAAFAAEAAAD+//z/AAAEAAAAAAD+//3/AAAEAAAAAAD+//7/AAAFAAAAAAD+////AAAFAAEAAAD///z/AAAEAAAAAAD///3/AAAEAAAAAAD///7/AAAFAAAAAAD/////AAAFAAEAAAAAAPz/AAAEAAAAAAAAAP3/AAAEAAAAAAAAAP7/AAAFAAAAAAAAAP//AAAFAAEAAAABAPz/AAAEAAAAAAABAP3/AAAEAAAAAAABAP7/AAAFAAAAAAABAP//AAAFAAEAAAACAPz/AAAEAAAAAAACAP3/AAAEAAAAAAACAP7/AAAFAAAAAAACAP//AAAFAAEAAAADAPz/AAAEAAAAAAADAP3/AAAEAAAAAAADAP7/AAAFAAAAAAADAP//AAAFAAEAAAAEAPz/AAAEAAAAAAAEAP3/AAAEAAAAAAAEAP7/AAAFAAAAAAAEAP//AAAFAAEAAAAFAPz/AAAEAAAAAAAFAP3/AAAEAAAAAAAFAP7/AAAFAAAAAAAFAP//AAAFAAEAAAAGAPz/AAAEAAAAAAAGAP3/AAAEAAAAAAAGAP7/AAAFAAAAAAAGAP//AAAFAAEAAAAHAPz/AAAEAAAAAAAHAP3/AAAEAAAAAAAHAP7/AAAFAAAAAAAHAP//AAAFAAEAAAAIAPz/AAAEAAAAAAAIAP3/AAAEAAAAAAAIAP7/AAAFAAAAAAAIAP//AAAFAAEAAAAJAPz/AAAEAAAAAAAJAP3/AAAEAAAAAAAJAP7/AAAFAAAAAAAJAP//AAAFAAEAAAAKAPz/AAAEAAAAAAAKAP3/AAAEAAAAAAAKAP7/AAAFAAAAAAAKAP//AAAFAAEAAAALAPz/AAAEAAAAAAALAP3/AAAEAAAAAAALAP7/AAAFAAAAAAALAP//AAAFAAEAAAAMAPz/AAAEAAAAAAAMAP3/AAAEAAAAAAAMAP7/AAAFAAAAAAAMAP//AAAFAAEAAAANAPz/AAAEAAAAAAANAP3/AAAEAAAAAAANAP7/AAAFAAAAAAANAP//AAAFAAEAAAAOAPz/AAAEAAAAAAAOAP3/AAAEAAAAAAAOAP7/AAAFAAAAAAAOAP//AAAFAAEAAAAPAPz/AAAEAAAAAAAPAP3/AAAEAAAAAAAPAP7/AAAFAAAAAAAPAP//AAAFAAEAAAAQAPz/AAAEAAAAAAAQAP3/AAAEAAAAAAAQAP7/AAAFAAAAAAAQAP//AAAFAAEAAAARAPz/AAAEAAAAAAARAP3/AAAEAAAAAAARAP7/AAAFAAAAAAARAP//AAAFAAEAAAASAPz/AAAEAAAAAAASAP3/AAAEAAAAAAASAP7/AAAFAAAAAAASAP//AAAFAAEAAAATAPz/AAAEAAAAAAATAP3/AAAEAAAAAAATAP7/AAAFAAAAAAATAP//AAAFAAEAAAAUAPz/AAAEAAAAAAAUAP3/AAAEAAAAAAAUAP7/AAAFAAAAAAAUAP//AAAFAAEAAAAVAPz/AAAEAAAAAAAVAP3/AAAEAAAAAAAVAP7/AAAFAAAAAAAVAP//AAAFAAEAAAA=")
tile_set = SubResource("TileSet_4a0ou")

[node name="Pandolfi" type="CharacterBody2D" parent="." groups=["Players"]]
z_index = 5
script = ExtResource("2_4a0ou")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Pandolfi"]
sprite_frames = SubResource("SpriteFrames_80n4b")
animation = &"jump"
autoplay = "run"

[node name="RunCol" type="CollisionShape2D" parent="Pandolfi"]
position = Vector2(5.5, 1.5)
shape = SubResource("RectangleShape2D_d2kyf")

[node name="DuckCol" type="CollisionShape2D" parent="Pandolfi"]
position = Vector2(5.5, 3.25)
shape = SubResource("RectangleShape2D_aqobb")

[node name="Camera2D" type="Camera2D" parent="Pandolfi"]
offset = Vector2(30, -12)
zoom = Vector2(9, 9)
position_smoothing_enabled = true
position_smoothing_speed = 0.1

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="background1" parent="." instance=ExtResource("9_vixkd")]
z_index = 1
position = Vector2(40, -24)

[node name="back" parent="background1" index="0"]
visible = true
repeat_times = 20

[node name="mid" parent="background1" index="1"]
scroll_scale = Vector2(0.5, 1)
repeat_times = 20

[node name="front" parent="background1" index="2"]
scroll_scale = Vector2(1, 1)
repeat_times = 20

[node name="background2" parent="." instance=ExtResource("9_vixkd")]
z_index = 1
position = Vector2(1064, -24)

[node name="back" parent="background2" index="0"]
visible = true
repeat_times = 20

[node name="mid" parent="background2" index="1"]
scroll_scale = Vector2(0.5, 1)
repeat_times = 22

[node name="front" parent="background2" index="2"]
scroll_scale = Vector2(1, 1)
repeat_times = 25

[node name="fish" parent="." instance=ExtResource("10_4y3pj")]
process_mode = 4
visible = false
z_index = 100
position = Vector2(-32.000004, -23.000002)

[connection signal="body_entered" from="ObstacleTemplates/waterthingy" to="ObstacleTemplates/waterthingy" method="_on_body_entered"]
[connection signal="body_entered" from="ObstacleTemplates/spikes" to="ObstacleTemplates/spikes" method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="Pandolfi" method="_on_death_timer_timeout"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]

[editable path="background1"]
[editable path="background2"]
[editable path="fish"]
